RESOLVED FIXED164154
URLParser should not try to interpret host of URLs with unrecognized schemes as IPv4 address
https://bugs.webkit.org/show_bug.cgi?id=164154
Summary URLParser should not try to interpret host of URLs with unrecognized schemes ...
Alex Christensen
Reported 2016-10-28 14:54:44 PDT
URLParser should not try to interpret host of URLs with unrecognized schemes as IPv4 address
Attachments
Patch (3.79 KB, patch)
2016-10-28 14:57 PDT, Alex Christensen
aestes: review+
Alex Christensen
Comment 1 2016-10-28 14:57:02 PDT
Alex Christensen
Comment 2 2016-10-28 17:20:11 PDT
Note You need to log in before you can comment on or make changes to this bug.